Profile Update added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.CakeShopAndroid"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".activity.user.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.user.YourOrderActivity"
             android:exported="false" />
         <activity
